Header Contact - fixing layout issues

--- a/styleguide/source/assets/scss/02-molecules/_header-contact.scss
+++ b/styleguide/source/assets/scss/02-molecules/_header-contact.scss
@@ -10,6 +10,13 @@
     }
   }
 
+  &__address {
+
+    span {
+      display: inline-block;
+    }
+  }
+
   &__directions {
     padding-bottom: 20px;
   }
